--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <title>Green Chemistry Cockpit</title>
+    <title>Greenmistry AI</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <footer>
+      <div align="center">
+  <sub> Desarrollado para la <strong>II HACKATHON DE QUÍMICA VERDE -
+Transformando tus ideas en soluciones circulares</strong>.</sub>
+</div>
+    </footer>
   </body>
 </html>
